--- a/Proyecto-1/index.html
+++ b/Proyecto-1/index.html
@@ -1,11 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto 1</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="entrrega.css">
+  <title>Proyecto 1</title>
 </head>
 <body>
-    
+
+  <header>
+    <div>Features Team Sign In</div>
+
+  </header>
+ 
+<section>
+  <span>
+    All your files in one secure location, accessible anywhere.
+  </span>
+
+  <div>
+    Fylo stores your most important files in one secure location. 
+    Access them wherever you need, share and collaborate with friends, 
+    family, and co-workers.
+  </div>
+
+  <nav>
+    Get Started
+  </nav>
+
+</section>
+
+<section>
+  <div>Stay productive, wherever you are</div>
+
+ <nav>Never let location be an issue when accessing your files. Fylo has you 
+  covered for all of your file storage needs.
+
+  Securely share files and folders with friends, family and colleagues for 
+  live collaboration. No email attachments required!</nav> 
+
+  <div>See how Fylo works</div>
+
+  <span>Fylo has improved our team productivity by an order of magnitude. Since 
+    making the switch our team has become a well-oiled collaboration machine.</span>
+
+  <div>Kyle Burton
+    Founder & CEO, Huddle</div>
+
+</section>
+ 
+<section>
+  <div>Get early access today</div>
+
+  <nav>It only takes a minute to sign up and our free starter tier is extremely generous. 
+    If you have any questions, our support team would be happy to help you.</nav>
+
+  <span>Get Started For Free</span>
+</section>
+ 
+
+<footer>
+  <div>Phone: +1-543-123-4567</div>
+  <div>example@fylo.com</div>
+
+  <div>About Us</div>
+  <div>Jobs</div>
+  <div>Press</div>
+  <div>Blog</div>
+
+  <div>Contact Us</div>
+  <div>Terms</div>
+  <div>Privacy</div>
+
+</footer>
+
 </body>
 </html>
