--- a/Proyecto-1/index.html
+++ b/Proyecto-1/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="entrrega.css">
+  <link rel="stylesheet" href="entrega.css">
   <title>Proyecto 1</title>
 </head>
 <body>
