puse proyecto1 corregido

--- a/Proyecto-1/index.html
+++ b/Proyecto-1/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="entrega.css">
-  <title>Prollecto 11</title>
+  <title>Proyecto 1</title>
 </head>
 <body>
 
@@ -13,10 +13,10 @@
 
   </header>
  
-<section>
-  <span>
+<section class="sección1">
+  <h3>
     All your files in one secure location, accessible anywhere.
-  </span>
+  </h3>
 
   <div>
     Fylo stores your most important files in one secure location. 
