--- a/Proyecto-1/index.html
+++ b/Proyecto-1/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-  <header>
-    <div>Features Team Sign In</div>
+  <header class="titulo">
+    <div class="botones">Features Team Sign In</div>
 
   </header>
  
