--- a/Proyecto-1/index.html
+++ b/Proyecto-1/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header class="titulo">
-    <div class="botones">Features Team Sign In</div>
+    <div>Features Team Sign In</div>
 
   </header>
  
