--- a/Proyecto-1/index.html
+++ b/Proyecto-1/index.html
@@ -31,8 +31,8 @@
 
 </section>
 
-<section>
-  <div>Stay productive, wherever you are</div>
+<section class="sección2">
+  <h3>Stay productive, wherever you are</h3>
 
  <nav>Never let location be an issue when accessing your files. Fylo has you 
   covered for all of your file storage needs.
@@ -50,8 +50,8 @@
 
 </section>
  
-<section>
-  <div>Get early access today</div>
+<section class="sección3">
+  <h3>Get early access today</h3>
 
   <nav>It only takes a minute to sign up and our free starter tier is extremely generous. 
     If you have any questions, our support team would be happy to help you.</nav>
