--- a/Proyecto-1/index.html
+++ b/Proyecto-1/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="entrega.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="./imagenes/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <title>Proyecto 1</title>
   
 </head>
@@ -32,21 +39,45 @@
 </section>
 
 <section class="sección2">
-  <h3>Stay productive, wherever you are</h3>
 
- <nav>Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.
+<div class="contenido">
 
-  Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!</nav> 
+  <h1>Stay productive, wherever you are</h1>
 
-  <div>See how Fylo works</div>
+  <br>
 
-  <span>Fylo has improved our team productivity by an order of magnitude. Since 
-    making the switch our team has become a well-oiled collaboration machine.</span>
+  <p>Never let location be an issue when accessing your files. Fylo has you 
+  covered for all of your file storage needs. </p>
 
-  <div>Kyle Burton
-    Founder & CEO, Huddle</div>
+  <br>
+
+  <p>Securely share files and folders with friends, family and colleagues for 
+  live collaboration. No email attachments required!</p> 
+
+  <br>
+
+  <a href="#" class="link">See how Fylo works
+    <img src="./imagenes/icon-arrow.svg" alt="">
+  </a>
+
+  <div class="conteiner-cita">
+
+<img class="comillas" src="./imagenes/icon-quotes.svg" alt="Pequeña imágen de cita">
+
+  <p class="cita">Fylo has improved our team productivity by <br> an order of magnitude. Since 
+    making the <br> switch our team has become a well-oiled <br> collaboration machine.</p>
+
+  <img class="Kyle-Pic" src="./imagenes/avatar-testimonial.jpg" alt="Kyle-Pic">
+
+  <span class="Kyle"><b>Kyle Burton</b> <br> Founder & CEO, Huddle</span>
+
+</div>
+    
+    <img class="Ilustración" src="./imagenes/illustration-2.svg" alt="Illustration">
+
+  </div>
+
+<br>
 
 </section>
  
