--- a/Proyecto-1/index.html
+++ b/Proyecto-1/index.html
@@ -15,96 +15,69 @@
   
 </head>
 <body>
-
-  <header class="titulo">
+  <header class="title">
     <div>Features Team Sign In</div>
-
   </header>
+  <section class="section-1">
+    <h3>
+      All your files in one secure location, accessible anywhere.
+    </h3>
+  
+    <div>
+      Fylo stores your most important files in one secure location.
+      Access them wherever you need, share and collaborate with friends,
+      family, and co-workers.
+    </div>
+  
+    <nav>
+      Get Started
+    </nav>
+  </section>
+  
+  <section class="section-2">
+      <div class="sub-container-s2-c1">
+        <h1>Stay productive, wherever you are</h1>
+        <p>Never let location be an issue when accessing your files. Fylo has you
+          covered for all of your file storage needs. </p>
+        <p>Securely share files and folders with friends, family and colleagues for
+          live collaboration. No email attachments required!</p>
+        <a href="#" class="link">See how Fylo works<img src="./imagenes/icon-arrow.svg" alt=""></a>
+      </div>
+      <div class="sub-container-s2-c2">
+        <img class="comillas" src="./imagenes/icon-quotes.svg" alt="Pequeña imágen de cita">
+        <p class="cita">Fylo has improved our team productivity by <br> an order of magnitude. Since
+          making the <br> switch our team has become a well-oiled <br> collaboration machine.</p>
+        <img class="Kyle-Pic" src="./imagenes/avatar-testimonial.jpg" alt="Kyle-Pic">
+        <span class="Kyle"><b>Kyle Burton</b> <br> Founder & CEO, Huddle</span>
+      </div>
+      <div class="sub-container-s2-c3"><img class="ilustration" src="./imagenes/illustration-2.svg" alt="Ilustración"></div>
+  </section>
+  
+  <section class="section-3">
+    <h3>Get early access today</h3>
+  
+    <nav>It only takes a minute to sign up and our free starter tier is extremely generous.
+      If you have any questions, our support team would be happy to help you.</nav>
+  
+    <span>Get Started For Free</span>
+  </section>
+  
+  
+  <footer>
+    <div>Phone: +1-543-123-4567</div>
+    <div>example@fylo.com</div>
+  
+    <div>About Us</div>
+    <div>Jobs</div>
+    <div>Press</div>
+    <div>Blog</div>
+  
+    <div>Contact Us</div>
+    <div>Terms</div>
+    <div>Privacy</div>
+  
+  </footer>
+  
+  </body>
  
-<section class="sección1">
-  <h3>
-    All your files in one secure location, accessible anywhere.
-  </h3>
-
-  <div>
-    Fylo stores your most important files in one secure location. 
-    Access them wherever you need, share and collaborate with friends, 
-    family, and co-workers.
-  </div>
-
-  <nav>
-    Get Started
-  </nav>
-
-</section>
-
-<section class="sección2">
-
-<div class="contenido">
-
-  <h1>Stay productive, wherever you are</h1>
-
-  <br>
-
-  <p>Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs. </p>
-
-  <br>
-
-  <p>Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!</p> 
-
-  <br>
-
-  <a href="#" class="link">See how Fylo works
-    <img src="./imagenes/icon-arrow.svg" alt="">
-  </a>
-
-  <div class="conteiner-cita">
-
-<img class="comillas" src="./imagenes/icon-quotes.svg" alt="Pequeña imágen de cita">
-
-  <p class="cita">Fylo has improved our team productivity by <br> an order of magnitude. Since 
-    making the <br> switch our team has become a well-oiled <br> collaboration machine.</p>
-
-  <img class="Kyle-Pic" src="./imagenes/avatar-testimonial.jpg" alt="Kyle-Pic">
-
-  <span class="Kyle"><b>Kyle Burton</b> <br> Founder & CEO, Huddle</span>
-
-</div>
-    
-    <img class="Ilustración" src="./imagenes/illustration-2.svg" alt="Illustration">
-
-  </div>
-
-<br>
-
-</section>
- 
-<section class="sección3">
-  <h3>Get early access today</h3>
-
-  <nav>It only takes a minute to sign up and our free starter tier is extremely generous. 
-    If you have any questions, our support team would be happy to help you.</nav>
-
-  <span>Get Started For Free</span>
-</section>
- 
-
-<footer>
-  <div>Phone: +1-543-123-4567</div>
-  <div>example@fylo.com</div>
-
-  <div>About Us</div>
-  <div>Jobs</div>
-  <div>Press</div>
-  <div>Blog</div>
-
-  <div>Contact Us</div>
-  <div>Terms</div>
-  <div>Privacy</div>
-
-</footer>
-
-</body>
 </html>
