--- a/Proyecto-1/index.html
+++ b/Proyecto-1/index.html
@@ -12,8 +12,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <title>Proyecto 1</title>
-  
 </head>
+
 <body>
   <header class="title">
     <div>Features Team Sign In</div>
@@ -66,13 +66,13 @@
   </section>
 
   <footer>
-    <div>
+    <div class="footer-s1">
       <dl>
         <dt>Phone: +1-543-123-4567<dt>
         <dt>example@fylo.com</dt>
       </dl>
     </div>
-    <div>
+    <div class="footer-s2">
       <dl>
         <dt>About Us<dt>
         <dt>Jobs</dt>
@@ -80,7 +80,7 @@
         <dt>Blog</dt>
       </dl>
     </div> 
-    <div>
+    <div class="footer-s3">
       <dl>
         <dt>Contact Us<dt>
         <dt>Terms</dt>
@@ -88,5 +88,6 @@
       </dl>
     </div>
   </footer>
-  </body>
+</body>
+
 </html>
