agregué div del logo

--- a/Proyecto-1/index.html
+++ b/Proyecto-1/index.html
@@ -16,6 +16,9 @@
 
 <body>
   <header class="title">
+    <div class="logo">
+      <img src="" alt="logo">
+    </div>
     <div>Features Team Sign In</div>
   </header>
   <section class="section-1">
