--- a/Proyecto-1/index.html
+++ b/Proyecto-1/index.html
@@ -17,7 +17,7 @@
 <body>
   <header class="title">
     <div class="logo">
-      <img src="" alt="logo">
+      <img src="proyecto-1-DWF24/Proyecto-1/imagenes/logo.svg" alt="logo">
     </div>
     <div>Features Team Sign In</div>
   </header>
