cambios en el index

--- a/Proyecto-1/index.html
+++ b/Proyecto-1/index.html
@@ -19,7 +19,11 @@
     <div class="logo">
       <img src="proyecto-1-DWF24/Proyecto-1/imagenes/logo.svg" alt="logo">
     </div>
-    <div>Features Team Sign In</div>
+    <div class="buttons">
+      <button>Features</button>
+      <button>Team</button>
+      <button>Sign in</button>
+    </div>
   </header>
   <section class="section-1">
     <h1>All your files in one secure location, accessible anywhere.</h1>
