--- a/Proyecto-1/index.html
+++ b/Proyecto-1/index.html
@@ -26,16 +26,19 @@
     </div>
   </header>
   <section class="section-1">
+    <div class="sub-container-s1-c1">
     <h1>All your files in one secure location, accessible anywhere.</h1>
-    <div>
+    <p>
       Fylo stores your most important files in one secure location.
       Access them wherever you need, share and collaborate with friends,
       family, and co-workers.
-    </div>
+    </p>
       <form action="" id="subscribe">
         <input type="email" name="example" id="example">
         <button type="submit">Get Started For Free</button>
       </form>
+      </div>
+      <div class="sub-container-s1-c3"><img class="ilustration" src=""</div>
   </section>
   
   <section class="section-2">
