--- a/Proyecto-1/index.html
+++ b/Proyecto-1/index.html
@@ -17,7 +17,7 @@
 <body>
   <header class="title">
     <div class="logo">
-      <img src="proyecto-1-DWF24/Proyecto-1/imagenes/logo.svg" alt="logo">
+      <img src="./imagenes/logo.svg" alt="logo">
     </div>
     <div class="buttons">
       <button>Features</button>
@@ -25,22 +25,24 @@
       <button>Sign in</button>
     </div>
   </header>
+
   <section class="section-1">
-    <div class="sub-container-s1-c1">
-    <h1>All your files in one secure location, accessible anywhere.</h1>
-    <p>
-      Fylo stores your most important files in one secure location.
-      Access them wherever you need, share and collaborate with friends,
-      family, and co-workers.
-    </p>
-      <form action="" id="subscribe">
-        <input type="email" name="example" id="example">
-        <button type="submit">Get Started For Free</button>
-      </form>
+    <div class="sub-container-s1-c1"><img class="illustration" src="./imagenes/illustration-1.svg" src=""></div>
+      <div class="sub-container-s1-c2">
+        <h1>All your files in one secure location, accessible anywhere.</h1>
+        <p>
+          Fylo stores your most important files in one secure location.
+          Access them wherever you need, share and collaborate with friends,
+          family, and co-workers.
+        </p>
+        <form action="" id="subscribe">
+          <input type="email" name="example" id="example">
+          <button type="submit">Get Started For Free</button>
+        </form>
       </div>
-      <div class="sub-container-s1-c3"><img class="ilustration" src=""</div>
   </section>
-  
+<img src="./imagenes/bg-curve-desktop.svg" id="image-curve-desktop" alt="">
+<img src="./imagenes/bg-curve-mobile.svg" id="image-curve-mobile" alt="">
   <section class="section-2">
       <div class="sub-container-s2-c1">
         <h1>Stay productive, wherever you are</h1>
@@ -57,7 +59,7 @@
         <img class="Kyle-Pic" src="./imagenes/avatar-testimonial.jpg" alt="Kyle-Pic">
         <span class="Kyle"><b>Kyle Burton</b> <br> Founder & CEO, Huddle</span>
       </div>
-      <div class="sub-container-s2-c3"><img class="ilustration" src="./imagenes/illustration-2.svg" alt="Ilustración"></div>
+      <div class="sub-container-s2-c3"><img class="illustration" src="./imagenes/illustration-2.svg" alt="Ilustración"></div>
   </section>
   
   <section class="section-3">
