--- a/Proyecto-1/index.html
+++ b/Proyecto-1/index.html
@@ -20,9 +20,9 @@
       <img src="./imagenes/logo.svg" alt="logo">
     </div>
     <div class="buttons">
-      <button>Features</button>
-      <button>Team</button>
-      <button>Sign in</button>
+      <button class="buttons-header">Features</button>
+      <button class="buttons-header">Team</button>
+      <button class="buttons-header">Sign in</button>
     </div>
   </header>
 
@@ -64,15 +64,15 @@
   
   <section class="section-3">
     <div class ="sub-container-s3-c1">
-      <h3>Get early access today</h3>
+      <h1>Get early access today</h1>
       <p>It only takes a minute to sign up and our free starter tier is extremely generous.
             If you have any questions, our support team would be happy to help you.</p>
     </div>
     <div class="sub-container-s3-c2">
       <form action="" id="subscribe">
-      <input type="email" name="example" id="example">
+      <input type="email" name="example" class="email-box" value="email@example.com">
       <br>
-      <button type="submit">Get Started For Free</button>
+      <button class="email-submit" type="submit">Get Started For Free</button>
       </form>
     </div>
   </section>
