--- a/Proyecto-1/index.html
+++ b/Proyecto-1/index.html
@@ -37,7 +37,7 @@
         </p>
         <form action="" id="subscribe">
           <input type="email" name="example" id="example">
-          <button type="submit">Get Started For Free</button>
+          <button type="submit">Get Started</button>
         </form>
       </div>
   </section>
@@ -57,15 +57,15 @@
         <p class="citation">Fylo has improved our team productivity by <br> an order of magnitude. Since
           making the <br> switch our team has become a well-oiled <br> collaboration machine.</p>
         <img class="Kyle-Pic" src="./imagenes/avatar-testimonial.jpg" alt="Kyle-Pic">
-        <span class="Kyle"><b>Kyle Burton</b> <br> Founder & CEO, Huddle</span>
+        <span class="Kyle"> <b>Kyle Burton</b> <br> Founder & CEO, Huddle</span>
       </div>
       <div class="sub-container-s2-c3"><img class="illustration" src="./imagenes/illustration-2.svg" alt="Ilustración"></div>
   </section>
   
   <section class="section-3">
     <div class ="sub-container-s3-c1">
-      <h1>Get early access today</h1>
-      <p>It only takes a minute to sign up and our free starter tier is extremely generous.
+      <h1 class="section-3-h1">Get early access today</h1>
+      <p class="section-3-p">It only takes a minute to sign up and our free starter tier is extremely generous.
             If you have any questions, our support team would be happy to help you.</p>
     </div>
     <div class="sub-container-s3-c2">
