modificaciones nav-bar / profile display

--- a/Proyecto-1/index.html
+++ b/Proyecto-1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,96 +8,108 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./imagenes/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <title>Proyecto 1</title>
 </head>
 
 <body>
-  <header class="title">
+  <header class="nav-bar">
     <div class="logo">
-      <img src="./imagenes/logo.svg" alt="logo">
+      <a href="./index.html"><img src="./imagenes/logo.svg" alt="fylo logo"></a>
     </div>
-    <div class="buttons">
-      <button class="buttons-header">Features</button>
-      <button class="buttons-header">Team</button>
-      <button class="buttons-header">Sign in</button>
-    </div>
+    <nav class="nav-links">
+      <button><a href="#">Features</a></button>
+      <button><a href="#">Team</a></button>
+      <button><a href="#">Sign in</a></button>
+    </nav>
   </header>
-
   <section class="section-1">
     <div class="sub-container-s1-c1"><img class="illustration" src="./imagenes/illustration-1.svg" src=""></div>
-      <div class="sub-container-s1-c2">
-        <h1>All your files in one secure location, accessible anywhere.</h1>
-        <p>
-          Fylo stores your most important files in one secure location.
-          Access them wherever you need, share and collaborate with friends,
-          family, and co-workers.
-        </p>
-        <form action="" id="subscribe">
-          <input type="email" name="example" id="example">
-          <button type="submit">Get Started</button>
-        </form>
-      </div>
-  </section>
-<img src="./imagenes/bg-curve-desktop.svg" id="image-curve-desktop" alt="">
-<img src="./imagenes/bg-curve-mobile.svg" id="image-curve-mobile" alt="">
-  <section class="section-2">
-      <div class="sub-container-s2-c1">
-        <h1>Stay productive, wherever you are</h1>
-        <p>Never let location be an issue when accessing your files. Fylo has you
-          covered for all of your file storage needs. </p>
-        <p>Securely share files and folders with friends, family and colleagues for
-          live collaboration. No email attachments required!</p>
-        <a href="#" class="link">See how Fylo works<img src="./imagenes/icon-arrow.svg" alt=""></a>
-      </div>
-      <div class="sub-container-s2-c2">
-        <img class="comillas" src="./imagenes/icon-quotes.svg" alt="cita">
-        <p class="citation">Fylo has improved our team productivity by <br> an order of magnitude. Since
-          making the <br> switch our team has become a well-oiled <br> collaboration machine.</p>
-        <img class="Kyle-Pic" src="./imagenes/avatar-testimonial.jpg" alt="Kyle-Pic">
-        <span class="Kyle"> <b>Kyle Burton</b> <br> Founder & CEO, Huddle</span>
-      </div>
-      <div class="sub-container-s2-c3"><img class="illustration" src="./imagenes/illustration-2.svg" alt="Ilustración"></div>
-  </section>
-  
-  <section class="section-3">
-    <div class ="sub-container-s3-c1">
-      <h1 class="section-3-h1">Get early access today</h1>
-      <p class="section-3-p">It only takes a minute to sign up and our free starter tier is extremely generous.
-            If you have any questions, our support team would be happy to help you.</p>
-    </div>
-    <div class="sub-container-s3-c2">
+    <div class="sub-container-s1-c2">
+      <h1>All your files in one secure location, accessible anywhere.</h1>
+      <p>
+        Fylo stores your most important files in one secure location.
+        Access them wherever you need, share and collaborate with friends,
+        family, and co-workers.
+      </p>
       <form action="" id="subscribe">
-      <input type="email" name="example" class="email-box" value="email@example.com">
-      <br>
-      <button class="email-submit" type="submit">Get Started For Free</button>
+        <input type="email" name="example" id="example">
+        <button type="submit">Get Started</button>
       </form>
     </div>
   </section>
-
+  <img src="./imagenes/bg-curve-desktop.svg" id="image-curve-desktop" alt="">
+  <img src="./imagenes/bg-curve-mobile.svg" id="image-curve-mobile" alt="">
+  <section class="section-2">
+    <div class="sub-container-s2-c1">
+      <h1>Stay productive, wherever you are</h1>
+      <p>Never let location be an issue when accessing your files. Fylo has you
+        covered for all of your file storage needs.
+      </p>
+      <p>Securely share files and folders with friends, family and colleagues for
+        live collaboration. No email attachments required!
+      </p>
+      <a href="#" class="link">See how Fylo works<img src="./imagenes/icon-arrow.svg" alt=""></a>
+    </div>
+    <div class="sub-container-s2-c2">
+      <img class="comillas" src="./imagenes/icon-quotes.svg" alt="cita">
+      <p class="citation">Fylo has improved our team productivity by an order of magnitude. Since making the switch our
+        team has become a well-oiled collaboration machine.</p>
+      <div class="profile-box">
+        <img class="profile-pic" src="./imagenes/avatar-testimonial.jpg" alt="Kyle-Pic">
+        <div class="profile-info">
+          <p class="profile-name">Kyle Burton</p>
+          <p class="profile-title">Founder & CEO, Huddle</p>
+        </div>
+      </div>
+    </div>
+    <div class="sub-container-s2-c3"><img class="illustration" src="./imagenes/illustration-2.svg" alt="Ilustración">
+    </div>
+  </section>
+  <section class="section-3">
+    <div class="sub-container-s3-c1">
+      <h1 class="section-3-h1">Get early access today</h1>
+      <p class="section-3-p">It only takes a minute to sign up and our free starter tier is extremely generous.
+        If you have any questions, our support team would be happy to help you.
+      </p>
+    </div>
+    <div class="sub-container-s3-c2">
+      <form action="" id="subscribe">
+        <input type="email" name="example" class="email-box" value="email@example.com">
+        <button class="email-submit" type="submit">Get Started For Free</button>
+      </form>
+    </div>
+  </section>
   <footer>
     <div class="footer-s1">
       <dl>
-        <dt>Phone: +1-543-123-4567<dt>
-        <dt>example@fylo.com</dt>
+        <dt><span>Phone: +1-543-123-4567</span>
+        <dt>
+        <dt><a href="#">example@fylo.com</a></dt>
       </dl>
     </div>
     <div class="footer-s2">
       <dl>
-        <dt>About Us<dt>
-        <dt>Jobs</dt>
-        <dt>Press</dt>
-        <dt>Blog</dt>
+        <dt><a href="#">About Us</a>
+        <dt>
+        <dt><a href="#">Jobs</a></dt>
+        <dt><a href="#">Press</a></dt>
+        <dt><a href="#">Blog</a></dt>
       </dl>
-    </div> 
+    </div>
     <div class="footer-s3">
       <dl>
-        <dt>Contact Us<dt>
-        <dt>Terms</dt>
-        <dt>Privacy</dt>
+        <dt><a href="#">Contact Us</a>
+        <dt>
+        <dt><a href="#">Terms</a></dt>
+        <dt><a href="#">Privacy</a></dt>
       </dl>
     </div>
   </footer>
