--- a/Proyecto-1/index.html
+++ b/Proyecto-1/index.html
@@ -6,16 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="entrega.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./imagenes/favicon-32x32.png">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
+
   <title>Proyecto 1</title>
 </head>
 
@@ -39,9 +36,9 @@
         Access them wherever you need, share and collaborate with friends,
         family, and co-workers.
       </p>
-      <form action="" id="subscribe">
-        <input type="email" name="example" id="example">
-        <button type="submit">Get Started</button>
+      <form action="">
+        <input type="email" name="example" class="email-box" value="enter your email...">
+        <button class="email-submit" type="submit"><a href="#">Get Started</a></button>
       </form>
     </div>
   </section>
@@ -76,14 +73,13 @@
   <section class="section-3">
     <div class="sub-container-s3-c1">
       <h1 class="section-3-h1">Get early access today</h1>
-      <p class="section-3-p">It only takes a minute to sign up and our free starter tier is extremely generous.
-        If you have any questions, our support team would be happy to help you.
+      <p class="section-3-p">It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.
       </p>
     </div>
     <div class="sub-container-s3-c2">
-      <form action="" id="subscribe">
-        <input type="email" name="example" class="email-box" value="email@example.com">
-        <button class="email-submit" type="submit">Get Started For Free</button>
+      <form action="">
+        <input type="email" name="example" class="email-box-2" value="email@example.com">
+        <button class="email-submit" type="submit"><a href="#">Get Started For Free</a></button>
       </form>
     </div>
   </section>
