cambios en footer

--- a/Proyecto-1/index.html
+++ b/Proyecto-1/index.html
@@ -117,7 +117,15 @@
       </div>
       <div class="column4">
         <span>
-          PLACEHOLDER
+          <a href="#">
+            <img src="./imagenes/facebook.png" alt="">
+          </a>
+          <a href="#">
+            <img src="./imagenes/twitter.png" alt="">
+          </a>
+          <a href="#">
+            <img src="./imagenes/instagram.png" alt="">
+          </a>
         </span>
       </div>
     </div>
